--- a/add-product.html
+++ b/add-product.html
@@ -65,7 +65,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<!-- //search-scripts -->
 					
 					<div class="online">
-					<a href="panier.html" >SHOP ONLINE</a>
+						<a href="panier.html" > <ion-icon name="cart-outline"></ion-icon><span>0</span></a>
 					</div>
 					<div class="clearfix"> </div>
 			</div>
@@ -205,10 +205,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<h6>NRL: five things we learned this weekend</h6>
 			<p>In support of suburban games; Warriors rip</p>
 			<a href="register.html" class="sign">SIGN UP AND GET MORE</a>
-			<p class="footer-class"> © 2015 Sport All Rights Reserved | Template by  <a href="http://w3layouts.com/" target="_blank">W3layouts</a> </p>
+			<p class="footer-class"> © 2015 All Rights Reserved | Template by  <a href="http://w3layouts.com/" target="_blank">W3layouts</a> </p>
 		</div>
 		<div class="clearfix"> </div>
 	</div>
 	<script src="js/product.js"></script>
+	<script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
 </body>
 </html>
