--- a/panier.html
+++ b/panier.html
@@ -22,6 +22,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
 <!--fonts-->
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800' rel='stylesheet' type='text/css'>
+<link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet">
 <!-- font awesome link-->
 </head>
 <body onload="load()">
@@ -63,7 +64,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<!-- //search-scripts -->
 				
 				<div class="online">
-				<a href="single.html" >SHOP ONLINE</a>
+				<a href="panier.html" ><ion-icon name="cart-outline"></ion-icon><span>0</span></a>
 				</div>
 				<div class="clearfix"> </div>
 		</div>
@@ -109,9 +110,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!---->
 <div class="product-grids">
 	<!-- <a href="add-product.html" class="btn btn-primary">Add product</a> -->
-	<div class="container">	
+	<!-- <div class="container">	
 	<div class="product-top">
-		<div id="products"> </div>
+		<div id="products"> </div> -->
 		<!-- <div class="col-md-4 grid-product-in">	
 		<div class=" product-grid">	
 			<a href="single.html"><img class="img-responsive " src="images/MSI-GL63-laptop.jpeg" alt=""></a>		
@@ -144,7 +145,16 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	</div>
 	</div>
 </div>
-	<!---->
+<!-- <div class="products-container">
+	<div class="products-header">
+		<h5 class="products-title">PRODUCT</h5>
+		<h5 class="price" style="margin-left: 120px;">PRICE</h5>
+		<h5 class="quantity">QUANTITY</h5>
+		<h5 class="total" style="margin-left: 150px;">TOTAL</h5>
+	</div>
+	<div class="products"></div>
+</div> --> -->
+	<!--
 <!--footer-->
 <div class="footer">
 	<div class="col-md-3 footer-left">
@@ -206,11 +216,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<h6>NRL: five things we learned this weekend</h6>
 			<p>In support of suburban games; Warriors rip</p>
 			<a href="register.html" class="sign">SIGN UP AND GET MORE</a>
-			<p class="footer-class"> © 2015 Sport All Rights Reserved | Template by  <a href="http://w3layouts.com/" target="_blank">W3layouts</a> </p>
+			<p class="footer-class"> © 2015 All Rights Reserved | Template by  <a href="http://w3layouts.com/" target="_blank">W3layouts</a> </p>
 		</div>
 		<div class="clearfix"> </div>
 	</div>
+	<script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
 	<script src="js/panier.js"></script>
-	<script ></script>
 </body>
 </html>
